--- a/salesTraction/src/assets/css/Header.css
+++ b/salesTraction/src/assets/css/Header.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap');
 
-header div {
+/* header div {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
-}
-header div button {
+    align-items: center; 
+} */
+/* header div button {
     margin-right: 1em;
-}
+} */
 header div h1 {
     font-family: "Jacques Francois Shadow", serif;
     font-size: 2rem;
     font-style: normal;
 }
+
+
