--- a/salesTraction/src/index.css
+++ b/salesTraction/src/index.css
@@ -2,21 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+#root{
+  padding: 0;
 }
-
+header{
+  padding: 2rem;
+  background-color: #feffe0;
+}
+body{
+  background-color: var(--primary-color);
+}
+/* 
 a {
   font-weight: 500;
   color: #646cff;
