--- a/salesTraction/src/assets/css/admin_connexion.css
+++ b/salesTraction/src/assets/css/admin_connexion.css
@@ -68,9 +68,9 @@ button[type="submit"]:hover {
 }
 
 p {
-  margin-top: 12px;
-  font-size: 14px;
-  text-align: center;
+  /* margin-top: 12px; */
+  /* font-size: 14px; */
+  /* text-align: center; */
 }
 
 /* Responsive Design */
