--- a/salesTraction/src/assets/css/marketplace_student.css
+++ b/salesTraction/src/assets/css/marketplace_student.css
@@ -506,7 +506,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  background-color: rgba(255, 255, 255, 0.4); /* blanc semi-transparent */
+  /* backdrop-filter: blur(150px); */
   display: flex;
   justify-content: center;
   align-items: center;
