--- a/salesTraction/src/assets/css/messagerie.css
+++ b/salesTraction/src/assets/css/messagerie.css
@@ -10,7 +10,7 @@
 }
 
 .message-header {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   padding: 1rem;
   background-color: white;
@@ -35,6 +35,7 @@
   display: flex;
   align-items: center;
   gap: 0.75rem;
+  margin-top: 15px;
 }
 
 .chat-avatar {
